[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Igor Ruzhilov <iruzhilov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
